--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.3",
+    "tailwindcss": "^4.1.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
